--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,7 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/hotel
-    username: postgres
-    password: postgres
-    driver-class-name: org.postgresql.Driver
-
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-
 server:
   port: 8080
+
+logging:
+  level:
+    root: info
+    com.company.hotel: debug
